examples/type_system/failing/186_runtime_boundary_return_e1004.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

import TypeSystem.BoundaryUnknown

fn bad() -> Int {
    TypeSystem.BoundaryUnknown.dynamic_string()
}

bad()
